objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>All_states__c</fullName>
        <label>Total states</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Data__c</fullName>
        <label>JSON Data</label>
        <length>35302</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Districts__c</fullName>
        <label>Total Districts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>